--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -4,5 +4,5 @@ name = "fibonacci-program"
 edition = "2021"
 
 [dependencies]
-sp1-zkvm = "5.0.8"
+sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
 ckb-vm = { git = "https://github.com/XuJiandong/ckb-vm.git", rev = "55c80c0" }
