--- a/.github/workflows/prove.yml
+++ b/.github/workflows/prove.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "29.4"
+
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -30,7 +35,7 @@ jobs:
       - name: Install SP1 toolchain
         run: |
           curl -L https://sp1.succinct.xyz | bash
-          ~/.sp1/bin/sp1up 
+          ~/.sp1/bin/sp1up -v 6.0.0-beta.1
           ~/.sp1/bin/cargo-prove prove --version
 
       - name: Build SP1 program
