--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 version = "0.1.0"
-name = "fibonacci-script"
+name = "ckb-vm-interpreter-script"
 edition = "2021"
-default-run = "fibonacci"
+default-run = "ckb-vm-interpreter"
 
 [[bin]]
-name = "fibonacci"
+name = "ckb-vm-interpreter"
 path = "src/bin/main.rs"
 
 [[bin]]
@@ -17,15 +17,16 @@ name = "vkey"
 path = "src/bin/vkey.rs"
 
 [dependencies]
-sp1-sdk = "5.0.8"
+sp1-sdk = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0.200", default-features = false, features = ["derive"] }
 clap = { version = "4.0", features = ["derive", "env"] }
 tracing = "0.1.40"
 hex = "0.4.3"
 alloy-sol-types = { workspace = true }
-fibonacci-lib = { path = "../lib" }
+ckb-vm-interpreter-lib = { path = "../lib" }
 dotenv = "0.15.0"
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 
 [build-dependencies]
-sp1-build = "5.0.8"
+sp1-build = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
