chore: switch ckb-vm dependency to a fork and add minimal execution option

--- a/.github/workflows/prove.yml
+++ b/.github/workflows/prove.yml
@@ -45,4 +45,4 @@ jobs:
 
       - name: Execute SP1 program
         run: |
-          cargo run --release -- --execute
+          cargo run --release -- --minimal-execute
