--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -19,6 +19,7 @@ path = "src/bin/vkey.rs"
 [dependencies]
 sp1-sdk = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
 sp1-core-executor = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
+sp1-hypercube = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0.200", default-features = false, features = ["derive"] }
 clap = { version = "4.0", features = ["derive", "env"] }
