chore: update dependencies and add asm feature support (#3)
Now it's using sp1 hypercube.

The example program performs a secp256k1 ECDSA signature verification inside CKB-VM(rv64im asm version), which itself runs within SP1 zkVM. Number of sp1 cycles: 27M(~49M gas cost).

The sp1 cycles for interpreter version of ckb-vm is 287M.

--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -3,6 +3,10 @@ version = "0.1.0"
 name = "ckb-vm-interpreter-program"
 edition = "2021"
 
+[features]
+default = ["asm"]
+asm = ["ckb-vm/asm"]
+
 [dependencies]
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
-ckb-vm = { git = "https://github.com/XuJiandong/ckb-vm.git", rev = "55c80c0" }
+ckb-vm = { git = "https://github.com/mohanson-fork/ckb-vm.git", branch = "asm_rv64im" }
