--- a/.github/workflows/prove.yml
+++ b/.github/workflows/prove.yml
@@ -30,7 +30,13 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: 1.85.0
+          toolchain: 1.92.0
+
+      - name: Setup gcc
+        run: |
+          sudo apt-get update -y
+          sudo apt install -y gcc-riscv64-linux-gnu
+          rustup target add riscv64gc-unknown-linux-gnu
 
       - name: Install SP1 toolchain
         run: |
@@ -38,11 +44,8 @@ jobs:
           ~/.sp1/bin/sp1up -v 6.0.0-beta.1
           ~/.sp1/bin/cargo-prove prove --version
 
-      - name: Build SP1 program
+      - name: Build SP1 program and run
         run: |
-          cd program
-          ~/.sp1/bin/cargo-prove prove build
-
-      - name: Execute SP1 program
-        run: |
-          cargo run --release -- --execute
+          export CC_riscv64im_succinct_zkvm_elf=riscv64-linux-gnu-gcc
+          cd program && ~/.sp1/bin/cargo-prove prove build
+          cd .. && cargo run --release -- --minimal-execute
