--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [features]
 default = ["asm"]
 asm = ["ckb-vm/asm"]
+use-k256 = []
 
 [dependencies]
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
